[project]
name = "g-voiceagent-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[cartesia,deepgram,google,mcp,openai,silero,turn-detector]~=1.0",
    "mistralai",
    "loguru",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.1.0",
    "huggingface-hub[cli]>=0.33.0",
]
